tests/invalid/MethodCall_Invalid_3.whiley
method main(int[] this) :
    this.f(1)
